Fix product translation z-index in edit mode
The product translation modal is now higher than the buy button
settings popover.

See edicy_cms#3685

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1919,10 +1919,6 @@ html:not(.semimodal-relative) .semimodal {
   left: 0;
 }
 
-body .edy-popover {
-  z-index: 56502 !important;
-}
-
 body .edy-settings-editor:not(.editor_default) {
   position: fixed !important;
   left: 0 !important;
